* BUG#7436 Handle coverage amounts in option management endorsements

Version 1.14 - 2017-11-09
* OTH#0000 The current value of the coverage amount should always be available in the selection field
* OTH#0000 Allow to access the coverage amount of another option in rule engine

Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06

Version 1.6 - 2015-12-23
* FEA#0000 Module Creation