@@ -46,6 +46,22 @@ class RuleEngineRuntime:
         cls.append_error(args, 'Coverage amount undefined')
 
     @classmethod
+    @check_args('option')
+    def _re_get_coverage_amount_at_date(cls, args, at_date):
+        option = cls.get_option(args)
+        version = option.get_version_at_date(at_date)
+        if version.coverage_amount:
+            return version.coverage_amount
+        cls.append_error(args, 'Coverage amount undefined')
+
+    @classmethod
+    @check_args('option')
+    def _re_get_coverage_amount_change_date(cls, args, at_date,
+            increase=False):
+        option = cls.get_option(args)
+        return option._get_coverage_amount_change_date(at_date, increase)
+
+    @classmethod
     @check_args('option', 'date')
     def _re_get_other_coverage_amount(cls, args, coverage_code):
         return cls.get_other_option_data(coverage_code,
